hphp/hack/test/typecheck/must_be_arraykey.php.exp
File "must_be_arraykey.php", line 5, characters 14-22:
Some type constraint(s) here are violated (Typing[4110])
File "hackarray.hhi", line 12, characters 30-30:
'T' is a constrained type parameter
File "hackarray.hhi", line 12, characters 35-42:
This is an array key (int/string)
File "must_be_arraykey.php", line 5, characters 21-21:
It is incompatible with an object of type I
